[gd_scene load_steps=3 format=2]

[ext_resource path="res://material_maker/widgets/node_editor/parameter_float.gd" type="Script" id=1]
[ext_resource path="res://material_maker/widgets/float_edit.tscn" type="PackedScene" id=2]

[node name="float" type="HBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="LabelMin" type="Label" parent="."]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "Min:"

[node name="Min" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_right = 90.0
margin_bottom = 24.0
text = "0"
value = 0.0
min_value = -65536.0
max_value = 65536.0
step = 0.005

[node name="LabelMax" type="Label" parent="."]
margin_left = 94.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Max:"

[node name="Max" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 186.0
margin_bottom = 24.0
text = "1"
value = 1.0
min_value = -65536.0
max_value = 65536.0
step = 0.005

[node name="LabelStep" type="Label" parent="."]
margin_left = 190.0
margin_top = 5.0
margin_right = 222.0
margin_bottom = 19.0
text = "Step:"

[node name="Step" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 226.0
margin_right = 284.0
margin_bottom = 24.0
text = "0.1"
value = 0.1
max_value = 10.0
step = 0.005

[node name="LabelDefault" type="Label" parent="."]
margin_left = 288.0
margin_top = 5.0
margin_right = 338.0
margin_bottom = 19.0
text = "Default:"

[node name="Default" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_right = 400.0
margin_bottom = 24.0
step = 0.1

[node name="LabelControl" type="Label" parent="."]
margin_left = 404.0
margin_top = 5.0
margin_right = 454.0
margin_bottom = 19.0
text = "Control:"

[node name="Control" type="OptionButton" parent="."]
margin_left = 458.0
margin_right = 521.0
margin_bottom = 24.0
text = "None"
[connection signal="value_changed" from="Min" to="." method="_on_Min_value_changed"]
[connection signal="value_changed" from="Max" to="." method="_on_Max_value_changed"]
[connection signal="value_changed" from="Step" to="." method="_on_Step_value_changed"]
